# circle-detection

./: .gitignore  CMakeLists.txt  README.md  circle_detection.cpp  opencv_circle_detection.cpp
rapport/: rapport.tex
